
Legend:
+ New
* Changed
! Fixed


1.6.7 - not released yet
========================
+ Ticket #2987, Playlist improvements:
  - Scroll and select the last added item.
  - Put MPC-HC on top and give the focus to the playlist after a drag-and drop.
* Updated Catalan and Greek translations
* Updated Little CMS to v2.5 (git d504603)
! Ticket #2991, Fix loading of MicroDVD subtitles


1.6.6 - 17 March 2013
=====================
+ Formats: The space key can now be used to enable/disable formats
+ Miscellaneous: Add button to export key bindings
+ Add the ability to choose the scale factor (relative to the screen size) for
  the auto-fit zoom
+ Internal Subtitles Renderer: Show all subtitles tracks in the Play -> Subtitles menu.
  That includes all the embedded tracks exhibited by the source filter and the external tracks.
+ Add a new shader that over brightens with gradient from the bottom to the top of the screen.
  It needs LCD monitors with low viewing angle (~170/160).
+ DVB: Remember audio and subtitle track selection.
+ Add an OSD reminder when Escape is pressed in D3D Fullscreen
+ Ticket #649, Add RARFileSource as an internal filter. Allows rar files without compression to
  be played without unpacking them.
+ Ticket #899, DVB: Add signal statistic to the status bar
+ Ticket #1025/#1054, Add the ability to select the default track directly by its number
  in MPC-HC and the standalone MPEG Splitter.
+ Ticket #2050, Add Romanian translation
+ Ticket #2905, Support DTS-HD and E-AC3 passthrough
+ Ticket #2935, Add support for sending "Now playing" information to Skype
* UI: Use a more native look and feel for the options dialog tree
* More resilient support for MPL2 and SRT subtitles formats:
  - Ticket #2779, Support MicroDVD tags in MPL2 subtitles files. This is normally not
    supported but MPL2 files that use MicroDVD tags for formatting are quite common.
  - Support SRT files with missing millisecond part in the timecodes.